Fixed a bug where webpage wouldn't work on mobile

--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ header {
 .hour {
   background-color: #ffffff;
   color: #000000;
-  line-height: 100px;
   border-bottom-left-radius: 15px;
   border: 1px solid #000000;
 }
